; ModuleID = '/home/carl/AnghaBench/git/extr_name-hash.c_lazy_dir_thread_proc.c'
source_filename = "/home/carl/AnghaBench/git/extr_name-hash.c_lazy_dir_thread_proc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.lazy_dir_thread_data = type { i32, i32, i32, i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @lazy_dir_thread_proc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @lazy_dir_thread_proc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.lazy_dir_thread_data*, align 8
  %4 = alloca %struct.strbuf, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.lazy_dir_thread_data*
  store %struct.lazy_dir_thread_data* %6, %struct.lazy_dir_thread_data** %3, align 8
  %7 = bitcast %struct.strbuf* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %8 = load %struct.lazy_dir_thread_data*, %struct.lazy_dir_thread_data** %3, align 8
  %9 = getelementptr inbounds %struct.lazy_dir_thread_data, %struct.lazy_dir_thread_data* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.lazy_dir_thread_data*, %struct.lazy_dir_thread_data** %3, align 8
  %12 = getelementptr inbounds %struct.lazy_dir_thread_data, %struct.lazy_dir_thread_data* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.lazy_dir_thread_data*, %struct.lazy_dir_thread_data** %3, align 8
  %15 = getelementptr inbounds %struct.lazy_dir_thread_data, %struct.lazy_dir_thread_data* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.lazy_dir_thread_data*, %struct.lazy_dir_thread_data** %3, align 8
  %18 = getelementptr inbounds %struct.lazy_dir_thread_data, %struct.lazy_dir_thread_data* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @handle_range_1(i32 %10, i32 %13, i32 %16, i32* null, %struct.strbuf* %4, i32 %19)
  %21 = call i32 @strbuf_release(%struct.strbuf* %4)
  ret i8* null
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @handle_range_1(i32, i32, i32, i32*, %struct.strbuf*, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
